[gd_scene load_steps=2 format=2]

[ext_resource path="res://main scene.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 77.0
margin_top = 421.0
margin_right = 340.0
margin_bottom = 474.0

[node name="PREENCHER TEXTO" type="Button" parent="."]
margin_left = 76.0
margin_top = 493.0
margin_right = 342.0
margin_bottom = 563.0
text = "PREENCHER TEXTO"

[node name="PREENCHER LISTA" type="Button" parent="."]
margin_left = 75.0
margin_top = 210.0
margin_right = 341.0
margin_bottom = 280.0
text = "PREENCHER LISTA"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 76.0
margin_top = 138.0
margin_right = 339.0
margin_bottom = 191.0

[node name="LISTA PREENCHIDA" type="Button" parent="."]
margin_left = 535.0
margin_top = 56.0
margin_right = 801.0
margin_bottom = 126.0
text = "LISTA PREENCHIDA"

[node name="APAGAR" type="Button" parent="."]
margin_left = 531.0
margin_top = 485.0
margin_right = 797.0
margin_bottom = 555.0
text = "APAGAR"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 369.0
margin_top = 160.0
margin_right = 997.0
margin_bottom = 437.0
color = Color( 0.87451, 0.0862745, 0.941176, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
margin_left = 21.0
margin_top = 17.0
margin_right = 609.0
margin_bottom = 256.0

[connection signal="text_entered" from="LineEdit2" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="PREENCHER TEXTO" to="." method="_on_PREENCHER_LISTA_pressed"]
[connection signal="pressed" from="PREENCHER TEXTO" to="." method="_on_PREENCHER_TEXTO_pressed"]
[connection signal="pressed" from="PREENCHER LISTA" to="." method="_on_PREENCHER_LISTA_pressed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="LISTA PREENCHIDA" to="." method="_on_LISTA_PREENCHIDA_pressed"]
[connection signal="pressed" from="APAGAR" to="." method="_on_APAGAR_pressed"]
